# Abgabe_1

exam_developer/: CMakeLists.txt  run_cmake.sh
exam_developer/include/: developer.h  developer_group.h
exam_developer/src/: developer.c  developer_group.c  main.c
